Fix Wrong Contact-Container Gap & .Section>h2 Padding-Bottom

--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,7 @@ main > section:first-child {
 
 .section > h2 {
     padding-top: 1rem;
-    padding-bottom: 2rem;
+    padding-bottom: 1.5rem;
 }
 
 .bg-color-1 {
@@ -217,7 +217,7 @@ main > section:first-child {
     display: grid;
     grid-template-rows: auto auto;
     justify-content: center;
-    gap: 4rem;
+    gap: 2rem;
 }
 
 .grid-social {
